Examples/Semantics/success/type-final.cl
class Main inherits IO {
    a : Complex;
};

class Complex inherits String {
    a : Int;
    b : Int;
};