Examples/Semantics/fail/hello_world.cl
class Main inherits IO {
   main(): Int {
	out_string(a+b)
   };};